# jqai

./: README.md  pyproject.toml  test.json
src/jqai/: __init__.py
src/llmjq/: __init__.py
